Fixed-alignment

--- a/board.css
+++ b/board.css
@@ -1,29 +1,28 @@
 body {
   background-color: lightgray;
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 #board-container {
-  border: 3px solid navy;
+  /* border: 3px solid navy; */
+  display: inline-block;
+  padding: 20px;
 }
 
 .row {
-
-  /* display: flex;  */
-  /* justify-content: space-evenly; */
-  /* border: 1px solid black; */
-  width: 828.1px;
-  height: 100px;
-  margin: auto;
+  display: flex;
+  justify-content: center;
 }
 
 .cell {
-  /* border: 1px solid gold; */
-  width: 100px;
-  height: 100px;
+  width: 8vw; 
+  height: 8vw; 
+  margin: 0px;
   display: inline-block;
-  margin: -2px;
-
+  width: 10vh;
+  height: 10vh;
 }
 
 .blue {
@@ -35,12 +34,13 @@ body {
 }
 
 .checker {
-  margin: 10px;
+  margin: 10%;
   border-radius: 50%;
-  height: 80px;
-  width: 80px;
-  border: 3px solid white;
+  height: 80%; 
+  width: 80%; 
+  border: 1px solid white;
 }
+
 
 .red-checker {
   /* background-color: #080707; */
